--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                                     <p class="header_navbar-heading">Find Your Destination</p>
                                 </div>
                                 <div class="header_navbar-search">
+                                    <div class="header_navbar-search-empty"></div>
                                     <input type="text" placeholder="Search..." class="header_navbar-input">
                                     <div class="header_navbar-search-icon-box">
                                         <i class="header_navbar-search-icon ti-search fa-flip-horizontal"></i>
@@ -753,7 +754,7 @@
             <div class="import_infor">
                 <div class="grid">
                     <div class="row no-gutters import_infor-main">
-                        <div class="col l-3 m-6 c-6">
+                        <div class="col l-3 m-6 c-12">
                             <div class="import_infor-picture">
                                 <img src="./assets/img/human1.jpg" alt="" class="import-infor-img">
                                 <div class="import_infor-details">
@@ -776,7 +777,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-3 m-6 c-6">
+                        <div class="col l-3 m-6 c-12">
                             <div class="import_infor-picture">
                                 <img src="./assets/img/human2.jpg" alt="" class="import-infor-img">
                                 <div class="import_infor-details">
@@ -799,7 +800,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-3 m-6 c-6">
+                        <div class="col l-3 m-6 c-12">
                             <div class="import_infor-picture">
                                 <img src="./assets/img/human3.jpg" alt="" class="import-infor-img">
                                 <div class="import_infor-details">
@@ -822,7 +823,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col l-3 m-6 c-6">
+                        <div class="col l-3 m-6 c-12">
                             <div class="import_infor-picture">
                                 <img src="./assets/img/human4.jpg" alt="" class="import-infor-img">
                                 <div class="import_infor-details">
