--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
             </div>
             <div class="footer_bottom">
                 <div class="grid">
-                    <p class="footer_text">© 2021 - Bản quyền thuộc về Công ty Tiến Đạt</p>
+                    <p class="footer_text">© 2021 - Bản quyền thuộc về Tiến Đạt</p>
                 </div>
             </div>
             <div class="footer_chat">
