--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
-    <div class="main">
+    <div class="main test">
         <div class="header">
             <div class="grid">
                 <div class="header_nav hide-on-mobile-tablet">
